wft/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Wft
Rule 1     Wft -> FWft
Rule 2     Wft -> OWft
Rule 3     FWft -> AtomicWft
Rule 4     FWft -> Y_WftNode
Rule 5     FWft -> Function
Rule 6     FWft -> Param1Op
Rule 7     OWft -> BinaryOp
Rule 8     OWft -> NaryOp
Rule 9     OWft -> Param2Op
Rule 10    OWft -> CloseStmt
Rule 11    OWft -> EveryStmt
Rule 12    OWft -> SomeStmt
Rule 13    OWft -> QIdenStmt
Rule 14    BinaryOp -> Y_Impl LParen Argument Comma Argument RParen
Rule 15    BinaryOp -> Y_OrImpl LParen Argument Comma Argument RParen
Rule 16    BinaryOp -> Y_AndImpl LParen Argument Comma Argument RParen
Rule 17    NaryOp -> Y_And LParen Wfts RParen
Rule 18    NaryOp -> Y_Or LParen Wfts RParen
Rule 19    NaryOp -> Y_Not LParen Wfts RParen
Rule 20    NaryOp -> Y_Nor LParen Wfts RParen
Rule 21    NaryOp -> Y_Thnot LParen Wfts RParen
Rule 22    NaryOp -> Y_Thnor LParen Wfts RParen
Rule 23    NaryOp -> Y_Nand LParen Wfts RParen
Rule 24    NaryOp -> Y_Xor LParen Wfts RParen
Rule 25    NaryOp -> Y_DoubImpl LParen Wfts RParen
Rule 26    NaryOp -> Y_And LParen RParen
Rule 27    NaryOp -> Y_Or LParen RParen
Rule 28    NaryOp -> Y_Not LParen RParen
Rule 29    NaryOp -> Y_Nor LParen RParen
Rule 30    NaryOp -> Y_Thnot LParen RParen
Rule 31    NaryOp -> Y_Thnor LParen RParen
Rule 32    NaryOp -> Y_Nand LParen RParen
Rule 33    NaryOp -> Y_Xor LParen RParen
Rule 34    NaryOp -> Y_DoubImpl LParen RParen
Rule 35    Param2Op -> Y_AndOr LBrace Integer Comma Integer RBrace LParen Wfts RParen
Rule 36    Param2Op -> Y_Thresh LBrace Integer Comma Integer RBrace LParen Wfts RParen
Rule 37    Param1Op -> Y_Thresh LBrace Integer RBrace LParen Wfts RParen
Rule 38    EveryStmt -> Y_Every LBrace AtomicName RBrace LParen Wfts RParen
Rule 39    EveryStmt -> Y_Every LBrace AtomicName RBrace LParen RParen
Rule 40    SomeStmt -> Y_Some LBrace AtomicName LParen AtomicName RParen RBrace LParen Wfts RParen
Rule 41    SomeStmt -> Y_Some LBrace AtomicName LParen AtomicName RParen RBrace LParen RParen
Rule 42    CloseStmt -> Y_Close LParen AtomicNameSet Comma Wft RParen
Rule 43    AtomicWft -> Y_Identifier
Rule 44    AtomicWft -> Y_String
Rule 45    AtomicWft -> Y_Integer
Rule 46    Function -> FWft LParen Arguments RParen
Rule 47    QIdenStmt -> Y_QIdentifier LParen Wfts RParen
Rule 48    QIdenStmt -> Y_QIdentifier LParen RParen
Rule 49    Argument -> Wft
Rule 50    Argument -> Y_None
Rule 51    Argument -> ArgumentFunction
Rule 52    Argument -> LBracket Wfts RBracket
Rule 53    Argument -> LBracket RBracket
Rule 54    ArgumentFunction -> Y_SetOf LParen Wfts RParen
Rule 55    ArgumentFunction -> Y_SetOf LParen RParen
Rule 56    Wfts -> Wft
Rule 57    Wfts -> Wfts Comma Wft
Rule 58    Arguments -> Argument
Rule 59    Arguments -> Arguments Comma Argument
Rule 60    AtomicNameSet -> AtomicName
Rule 61    AtomicNameSet -> LParen AtomicNames RParen
Rule 62    AtomicNames -> AtomicName
Rule 63    AtomicNames -> AtomicNames Comma AtomicName
Rule 64    AtomicName -> Y_Identifier
Rule 65    Y_Impl -> Impl
Rule 66    Y_Or -> Or
Rule 67    Y_Integer -> Integer
Rule 68    Y_String -> String
Rule 69    Y_Not -> Not
Rule 70    Y_Nor -> Nor
Rule 71    Y_Thnot -> Thnot
Rule 72    Y_Thnor -> Thnor
Rule 73    Y_Nand -> Nand
Rule 74    Y_Xor -> Xor
Rule 75    Y_DoubImpl -> DoubImpl
Rule 76    Y_AndOr -> AndOr
Rule 77    Y_Thresh -> Thresh
Rule 78    Y_SetOf -> SetOf
Rule 79    Y_Every -> Every
Rule 80    Y_Some -> Some
Rule 81    Y_Close -> Close
Rule 82    Y_And -> And
Rule 83    Y_WftNode -> WftNode
Rule 84    Y_QIdentifier -> QIdentifier
Rule 85    Y_Identifier -> Identifier
Rule 86    Y_None -> None
Rule 87    Y_OrImpl -> OrImpl
Rule 88    Y_AndImpl -> AndImpl

Terminals, with rules where they appear

And                  : 82
AndImpl              : 88
AndOr                : 76
Close                : 81
Comma                : 14 15 16 35 36 42 57 59 63
DoubImpl             : 75
Every                : 79
Identifier           : 85
Impl                 : 65
Integer              : 35 35 36 36 37 67
LBrace               : 35 36 37 38 39 40 41
LBracket             : 52 53
LParen               : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 40 41 41 42 46 47 48 54 55 61
Nand                 : 73
None                 : 86
Nor                  : 70
Not                  : 69
Or                   : 66
OrImpl               : 87
QIdentifier          : 84
RBrace               : 35 36 37 38 39 40 41
RBracket             : 52 53
RParen               : 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 40 41 41 42 46 47 48 54 55 61
SetOf                : 78
Some                 : 80
String               : 68
Thnor                : 72
Thnot                : 71
Thresh               : 77
WftNode              : 83
Xor                  : 74
error                : 

Nonterminals, with rules where they appear

Argument             : 14 14 15 15 16 16 58 59
ArgumentFunction     : 51
Arguments            : 46 59
AtomicName           : 38 39 40 40 41 41 60 62 63
AtomicNameSet        : 42
AtomicNames          : 61 63
AtomicWft            : 3
BinaryOp             : 7
CloseStmt            : 10
EveryStmt            : 11
FWft                 : 1 46
Function             : 5
NaryOp               : 8
OWft                 : 2
Param1Op             : 6
Param2Op             : 9
QIdenStmt            : 13
SomeStmt             : 12
Wft                  : 42 49 56 57 0
Wfts                 : 17 18 19 20 21 22 23 24 25 35 36 37 38 40 47 52 54 57
Y_And                : 17 26
Y_AndImpl            : 16
Y_AndOr              : 35
Y_Close              : 42
Y_DoubImpl           : 25 34
Y_Every              : 38 39
Y_Identifier         : 43 64
Y_Impl               : 14
Y_Integer            : 45
Y_Nand               : 23 32
Y_None               : 50
Y_Nor                : 20 29
Y_Not                : 19 28
Y_Or                 : 18 27
Y_OrImpl             : 15
Y_QIdentifier        : 47 48
Y_SetOf              : 54 55
Y_Some               : 40 41
Y_String             : 44
Y_Thnor              : 22 31
Y_Thnot              : 21 30
Y_Thresh             : 36 37
Y_WftNode            : 4
Y_Xor                : 24 33

Parsing method: LALR

state 0

    (0) S' -> . Wft
    (1) Wft -> . FWft
    (2) Wft -> . OWft
    (3) FWft -> . AtomicWft
    (4) FWft -> . Y_WftNode
    (5) FWft -> . Function
    (6) FWft -> . Param1Op
    (7) OWft -> . BinaryOp
    (8) OWft -> . NaryOp
    (9) OWft -> . Param2Op
    (10) OWft -> . CloseStmt
    (11) OWft -> . EveryStmt
    (12) OWft -> . SomeStmt
    (13) OWft -> . QIdenStmt
    (43) AtomicWft -> . Y_Identifier
    (44) AtomicWft -> . Y_String
    (45) AtomicWft -> . Y_Integer
    (83) Y_WftNode -> . WftNode
    (46) Function -> . FWft LParen Arguments RParen
    (37) Param1Op -> . Y_Thresh LBrace Integer RBrace LParen Wfts RParen
    (14) BinaryOp -> . Y_Impl LParen Argument Comma Argument RParen
    (15) BinaryOp -> . Y_OrImpl LParen Argument Comma Argument RParen
    (16) BinaryOp -> . Y_AndImpl LParen Argument Comma Argument RParen
    (17) NaryOp -> . Y_And LParen Wfts RParen
    (18) NaryOp -> . Y_Or LParen Wfts RParen
    (19) NaryOp -> . Y_Not LParen Wfts RParen
    (20) NaryOp -> . Y_Nor LParen Wfts RParen
    (21) NaryOp -> . Y_Thnot LParen Wfts RParen
    (22) NaryOp -> . Y_Thnor LParen Wfts RParen
    (23) NaryOp -> . Y_Nand LParen Wfts RParen
    (24) NaryOp -> . Y_Xor LParen Wfts RParen
    (25) NaryOp -> . Y_DoubImpl LParen Wfts RParen
    (26) NaryOp -> . Y_And LParen RParen
    (27) NaryOp -> . Y_Or LParen RParen
    (28) NaryOp -> . Y_Not LParen RParen
    (29) NaryOp -> . Y_Nor LParen RParen
    (30) NaryOp -> . Y_Thnot LParen RParen
    (31) NaryOp -> . Y_Thnor LParen RParen
    (32) NaryOp -> . Y_Nand LParen RParen
    (33) NaryOp -> . Y_Xor LParen RParen
    (34) NaryOp -> . Y_DoubImpl LParen RParen
    (35) Param2Op -> . Y_AndOr LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (36) Param2Op -> . Y_Thresh LBrace Integer Comma Integer RBrace LParen Wfts RParen
    (42) CloseStmt -> . Y_Close LParen AtomicNameSet Comma Wft RParen
    (38) EveryStmt -> . Y_Every LBrace AtomicName RBrace LParen Wfts RParen
    (39) EveryStmt -> . Y_Every LBrace AtomicName RBrace LParen RParen
    (40) SomeStmt -> . Y_Some LBrace AtomicName LParen AtomicName RParen RBrace LParen Wfts RParen
    (41) SomeStmt -> . Y_Some LBrace AtomicName LParen AtomicName RParen RBrace LParen RParen
    (47) QIdenStmt -> . Y_QIdentifier LParen Wfts RParen
    (48) QIdenStmt -> . Y_QIdentifier LParen RParen
    (85) Y_Identifier -> . Identifier
    (68) Y_String -> . String
    (67) Y_Integer -> . Integer
    (77) Y_Thresh -> . Thresh
    (65) Y_Impl -> . Impl
    (87) Y_OrImpl -> . OrImpl
    (88) Y_AndImpl -> . AndImpl
    (82) Y_And -> . And
    (66) Y_Or -> . Or
    (69) Y_Not -> . Not
    (70) Y_Nor -> . Nor
    (71) Y_Thnot -> . Thnot
    (72) Y_Thnor -> . Thnor
    (73) Y_Nand -> . Nand
    (74) Y_Xor -> . Xor
    (75) Y_DoubImpl -> . DoubImpl
    (76) Y_AndOr -> . AndOr
    (81) Y_Close -> . Close
    (79) Y_Every -> . Every
    (80) Y_Some -> . Some
    (84) Y_QIdentifier -> . QIdentifier

    WftNode         shift and go to state 18
    Identifier      shift and go to state 38
    String          shift and go to state 39
    Integer         shift and go to state 20
    Thresh          shift and go to state 40
    Impl            shift and go to state 41
    OrImpl          shift and go to state 42
    AndImpl         shift and go to state 43
    And             shift and go to state 44
    Or              shift and go to state 45
    Not             shift and go to state 46
    Nor             shift and go to state 47
    Thnot           shift and go to state 48
    Thnor           shift and go to state 49
    Nand            shift and go to state 50
    Xor             shift and go to state 51
    DoubImpl        shift and go to state 52
    AndOr           shift and go to state 53
    Close           shift and go to state 54
    Every           shift and go to state 55
    Some            shift and go to state 56
    QIdentifier     shift and go to state 57

    Wft                            shift and go to state 1
    FWft                           shift and go to state 2
    OWft                           shift and go to state 3
    AtomicWft                      shift and go to state 4
    Y_WftNode                      shift and go to state 5
    Function                       shift and go to state 6
    Param1Op                       shift and go to state 7
    BinaryOp                       shift and go to state 8
    NaryOp                         shift and go to state 9
    Param2Op                       shift and go to state 10
    CloseStmt                      shift and go to state 11
    EveryStmt                      shift and go to state 12
    SomeStmt                       shift and go to state 13
    QIdenStmt                      shift and go to state 14
    Y_Identifier                   shift and go to state 15
    Y_String                       shift and go to state 16
    Y_Integer                      shift and go to state 17
    Y_Thresh                       shift and go to state 19
    Y_Impl                         shift and go to state 21
    Y_OrImpl                       shift and go to state 22
    Y_AndImpl                      shift and go to state 23
    Y_And                          shift and go to state 24
    Y_Or                           shift and go to state 25
    Y_Not                          shift and go to state 26
    Y_Nor                          shift and go to state 27
    Y_Thnot                        shift and go to state 28
    Y_Thnor                        shift and go to state 29
    Y_Nand                         shift and go to state 30
    Y_Xor                          shift and go to state 31
    Y_DoubImpl                     shift and go to state 32
    Y_AndOr                        shift and go to state 33
    Y_Close                        shift and go to state 34
    Y_Every                        shift and go to state 35
    Y_Some                         shift and go to state 36
    Y_QIdentifier                  shift and go to state 37

state 1

    (0) S' -> Wft .



state 2

    (1) Wft -> FWft .
    (46) Function -> FWft . LParen Arguments RParen

    $end            reduce using rule 1 (Wft -> FWft .)
    RParen          reduce using rule 1 (Wft -> FWft .)
    Comma           reduce using rule 1 (Wft -> FWft .)
    RBracket        reduce using rule 1 (Wft -> FWft .)
    LParen          shift and go to state 58


state 3

    (2) Wft -> OWft .

    $end            reduce using rule 2 (Wft -> OWft .)
    RParen          reduce using rule 2 (Wft -> OWft .)
    Comma           reduce using rule 2 (Wft -> OWft .)
    RBracket        reduce using rule 2 (Wft -> OWft .)


state 4

    (3) FWft -> AtomicWft .

    LParen          reduce using rule 3 (FWft -> AtomicWft .)
    $end            reduce using rule 3 (FWft -> AtomicWft .)
    RParen          reduce using rule 3 (FWft -> AtomicWft .)
    Comma           reduce using rule 3 (FWft -> AtomicWft .)
    RBracket        reduce using rule 3 (FWft -> AtomicWft .)


state 5

    (4) FWft -> Y_WftNode .

    LParen          reduce using rule 4 (FWft -> Y_WftNode .)
    $end            reduce using rule 4 (FWft -> Y_WftNode .)
    RParen          reduce using rule 4 (FWft -> Y_WftNode .)
    Comma           reduce using rule 4 (FWft -> Y_WftNode .)
    RBracket        reduce using rule 4 (FWft -> Y_WftNode .)


state 6

    (5) FWft -> Function .

    LParen          reduce using rule 5 (FWft -> Function .)
    $end            reduce using rule 5 (FWft -> Function .)
    RParen          reduce using rule 5 (FWft -> Function .)
    Comma           reduce using rule 5 (FWft -> Function .)
    RBracket        reduce using rule 5 (FWft -> Function .)


state 7

    (6) FWft -> Param1Op .

    LParen          reduce using rule 6 (FWft -> Param1Op .)
    $end            reduce using rule 6 (FWft -> Param1Op .)
    RParen          reduce using rule 6 (FWft -> Param1Op .)
    Comma           reduce using rule 6 (FWft -> Param1Op .)
    RBracket        reduce using rule 6 (FWft -> Param1Op .)


state 8

    (7) OWft -> BinaryOp .

    $end            reduce using rule 7 (OWft -> BinaryOp .)
    RParen          reduce using rule 7 (OWft -> BinaryOp .)
    Comma           reduce using rule 7 (OWft -> BinaryOp .)
    RBracket        reduce using rule 7 (OWft -> BinaryOp .)


state 9

    (8) OWft -> NaryOp .

    $end            reduce using rule 8 (OWft -> NaryOp .)
    RParen          reduce using rule 8 (OWft -> NaryOp .)
    Comma           reduce using rule 8 (OWft -> NaryOp .)
    RBracket        reduce using rule 8 (OWft -> NaryOp .)


state 10

    (9) OWft -> Param2Op .

    $end            reduce using rule 9 (OWft -> Param2Op .)
    RParen          reduce using rule 9 (OWft -> Param2Op .)
    Comma           reduce using rule 9 (OWft -> Param2Op .)
    RBracket        reduce using rule 9 (OWft -> Param2Op .)


state 11

    (10) OWft -> CloseStmt .

    $end            reduce using rule 10 (OWft -> CloseStmt .)
    RParen          reduce using rule 10 (OWft -> CloseStmt .)
    Comma           reduce using rule 10 (OWft -> CloseStmt .)
    RBracket        reduce using rule 10 (OWft -> CloseStmt .)


state 12

    (11) OWft -> EveryStmt .

    $end            reduce using rule 11 (OWft -> EveryStmt .)
    RParen          reduce using rule 11 (OWft -> EveryStmt .)
    Comma           reduce using rule 11 (OWft -> EveryStmt .)
    RBracket        reduce using rule 11 (OWft -> EveryStmt .)


state 13

    (12) OWft -> SomeStmt .

    $end            reduce using rule 12 (OWft -> SomeStmt .)
    RParen          reduce using rule 12 (OWft -> SomeStmt .)
    Comma           reduce using rule 12 (OWft -> SomeStmt .)
    RBracket        reduce using rule 12 (OWft -> SomeStmt .)


state 14

    (13) OWft -> QIdenStmt .

    $end            reduce using rule 13 (OWft -> QIdenStmt .)
    RParen          reduce using rule 13 (OWft -> QIdenStmt .)
    Comma           reduce using rule 13 (OWft -> QIdenStmt .)
    RBracket        reduce using rule 13 (OWft -> QIdenStmt .)


state 15

    (43) AtomicWft -> Y_Identifier .

    LParen          reduce using rule 43 (AtomicWft -> Y_Identifier .)
    $end            reduce using rule 43 (AtomicWft -> Y_Identifier .)
    RParen          reduce using rule 43 (AtomicWft -> Y_Identifier .)
    Comma           reduce using rule 43 (AtomicWft -> Y_Identifier .)
    RBracket        reduce using rule 43 (AtomicWft -> Y_Identifier .)


state 16

    (44) AtomicWft -> Y_String .

    LParen          reduce using rule 44 (AtomicWft -> Y_String .)
    $end            reduce using rule 44 (AtomicWft -> Y_String .)
    RParen          reduce using rule 44 (AtomicWft -> Y_String .)
    Comma           reduce using rule 44 (AtomicWft -> Y_String .)
    RBracket        reduce using rule 44 (AtomicWft -> Y_String .)


state 17

    (45) AtomicWft -> Y_Integer .

    LParen          reduce using rule 45 (AtomicWft -> Y_Integer .)
    $end            reduce using rule 45 (AtomicWft -> Y_Integer .)
    RParen          reduce using rule 45 (AtomicWft -> Y_Integer .)
    Comma           reduce using rule 45 (AtomicWft -> Y_Integer .)
    RBracket        reduce using rule 45 (AtomicWft -> Y_Integer .)


state 18

    (83) Y_WftNode -> WftNode .

    LParen          reduce using rule 83 (Y_WftNode -> WftNode .)
    $end            reduce using rule 83 (Y_WftNode -> WftNode .)
    RParen          reduce using rule 83 (Y_WftNode -> WftNode .)
    Comma           reduce using rule 83 (Y_WftNode -> WftNode .)
    RBracket        reduce using rule 83 (Y_WftNode -> WftNode .)


state 19

    (37) Param1Op -> Y_Thresh . LBrace Integer RBrace LParen Wfts RParen
    (36) Param2Op -> Y_Thresh . LBrace Integer Comma Integer RBrace LParen Wfts RParen

    LBrace          shift and go to state 59


state 20

    (67) Y_Integer -> Integer .

    LParen          reduce using rule 67 (Y_Integer -> Integer .)
    $end            reduce using rule 67 (Y_Integer -> Integer .)
    RParen          reduce using rule 67 (Y_Integer -> Integer .)
    Comma           reduce using rule 67 (Y_Integer -> Integer .)
    RBracket        reduce using rule 67 (Y_Integer -> Integer .)


state 21

    (14) BinaryOp -> Y_Impl . LParen Argument Comma Argument RParen

    LParen          shift and go to state 60


state 22

    (15) BinaryOp -> Y_OrImpl . LParen Argument Comma Argument RParen

    LParen          shift and go to state 61


state 23

    (16) BinaryOp -> Y_AndImpl . LParen Argument Comma Argument RParen

    LParen          shift and go to state 62


state 24

    (17) NaryOp -> Y_And . LParen Wfts RParen
    (26) NaryOp -> Y_And . LParen RParen

    LParen          shift and go to state 63


state 25

    (18) NaryOp -> Y_Or . LParen Wfts RParen
    (27) NaryOp -> Y_Or . LParen RParen

    LParen          shift and go to state 64


state 26

    (19) NaryOp -> Y_Not . LParen Wfts RParen
    (28) NaryOp -> Y_Not . LParen RParen

    LParen          shift and go to state 65


state 27

    (20) NaryOp -> Y_Nor . LParen Wfts RParen
    (29) NaryOp -> Y_Nor . LParen RParen

    LParen          shift and go to state 66


state 28

    (21) NaryOp -> Y_Thnot . LParen Wfts RParen
    (30) NaryOp -> Y_Thnot . LParen RParen

    LParen          shift and go to state 67


state 29

    (22) NaryOp -> Y_Thnor . LParen Wfts RParen
    (31) NaryOp -> Y_Thnor . LParen RParen

    LParen          shift and go to state 68


state 30

    (23) NaryOp -> Y_Nand . LParen Wfts RParen
    (32) NaryOp -> Y_Nand . LParen RParen

    LParen          shift and go to state 69


state 31

    (24) NaryOp -> Y_Xor . LParen Wfts RParen
    (33) NaryOp -> Y_Xor . LParen RParen

    LParen          shift and go to state 70


state 32

    (25) NaryOp -> Y_DoubImpl . LParen Wfts RParen
    (34) NaryOp -> Y_DoubImpl . LParen RParen

    LParen          shift and go to state 71


state 33

    (35) Param2Op -> Y_AndOr . LBrace Integer Comma Integer RBrace LParen Wfts RParen

    LBrace          shift and go to state 72


state 34

    (42) CloseStmt -> Y_Close . LParen AtomicNameSet Comma Wft RParen

    LParen          shift and go to state 73


state 35

    (38) EveryStmt -> Y_Every . LBrace AtomicName RBrace LParen Wfts RParen
    (39) EveryStmt -> Y_Every . LBrace AtomicName RBrace LParen RParen

    LBrace          shift and go to state 74


state 36

    (40) SomeStmt -> Y_Some . LBrace AtomicName LParen AtomicName RParen RBrace LParen Wfts RParen
    (41) SomeStmt -> Y_Some . LBrace AtomicName LParen AtomicName RParen RBrace LParen RParen

    LBrace          shift and go to state 75


state 37

    (47) QIdenStmt -> Y_QIdentifier . LParen Wfts RParen
    (48) QIdenStmt -> Y_QIdentifier . LParen RParen

    LParen          shift and go to state 76


state 38

    (85) Y_Identifier -> Identifier .

    LParen          reduce using rule 85 (Y_Identifier -> Identifier .)
    $end            reduce using rule 85 (Y_Identifier -> Identifier .)
    RParen          reduce using rule 85 (Y_Identifier -> Identifier .)
    Comma           reduce using rule 85 (Y_Identifier -> Identifier .)
    RBrace          reduce using rule 85 (Y_Identifier -> Identifier .)
    RBracket        reduce using rule 85 (Y_Identifier -> Identifier .)


state 39

    (68) Y_String -> String .
